--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,20 +1,19 @@
-name : Go Project
-
+name: Go
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.21.5
-
+          go-version: "1.21.x"
+      - name: Install dependencies
+        run: go get .
       - name: Build
         run: go build -v ./...
-
-      - name: Test
-        run: go test -v ./...
+      - name: Test with the Go CLI
+        run: go test
