--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,59 @@
-name: Go
-on: [push]
+name: go-test
+
+on:
+  push:
+    branches: [ test-backend ]
+  pull_request:
+    branches: [ test-backend ]
 
 jobs:
   build:
+    name: build
     runs-on: ubuntu-latest
 
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:12
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: secretpassword
+          POSTGRES_USER: root
+          POSTGRES_DB: course
+          # The hostname used to communicate with the PostgreSQL service container
+
+          # The default PostgreSQL port
+        ports:
+          - 5432:5432
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Go
+      - uses: actions/checkout@v3
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.21.x"
-      - name: Install dependencies
-        run: go get .
-      - name: Build
-        run: go build -v ./...
-      - name: Test with the Go CLI
-        run: go test
+          go-version: '1.21.5'
+        id: go
+
+         # Downloads a copy of the code in your repository before running CI tests
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      
+      - name: Install golang-migrate
+        run: |
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.12.2/migrate.linux-amd64.tar.gz | tar xvz
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
+          which migrate
+  
+      
+
+
+      - name: Run migrations
+        run: make migrateup
+
