--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: go-test
 
 on:
   push:
-    branches: [ test-backend ]
+    branches: [test-backend]
   pull_request:
-    branches: [ test-backend ]
+    branches: [test-backend]
 
 jobs:
   build:
@@ -32,28 +32,24 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21.5'
-        id: go
+          go-version: "1.21.5"
+        id:
+          go
 
-         # Downloads a copy of the code in your repository before running CI tests
+          # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
         uses: actions/checkout@v4
-      
+
       - name: Install golang-migrate
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.12.2/migrate.linux-amd64.tar.gz | tar xvz
           sudo mv migrate.linux-amd64 /usr/bin/migrate
           which migrate
-  
-      
-
 
       - name: Run migrations
         run: make migrateup
-
